--- a/views/serial_quotation_report.xml
+++ b/views/serial_quotation_report.xml
@@ -2,6 +2,9 @@
 <openerp>
     <data>
         <template id="serial_saleorder_replace_quotation_report" inherit_id="sale.report_saleorder_document">
+            <!-- <xpath expr="//div[@class='page']" position="before">
+                <t t-call="serial_reporting.soulco_custom_header" />
+            </xpath> -->
             <xpath expr="//div[@class='page']" position="replace">
                 <div class="page">
                     <div class="oe_structure"/>
