--- a/views/soulco_purchase_report.xml
+++ b/views/soulco_purchase_report.xml
@@ -83,7 +83,7 @@
             <!-- Add RC NIF & AI on customer info -->
             <xpath expr="//div[@class='col-xs-5 col-xs-offset-1']" position="replace">
                 <div class="col-xs-4 col-xs-offset-1">
-                    <table class="table-bordered" style="width:100%;">
+                    <table class="table-bordered" style="width:100%;padding-left:5px">
                         <tr>
                             <td>
                                 <h3 t-field="o.partner_id.name"></h3>
@@ -110,6 +110,10 @@
                         </tr>
                     </table>
                 </div>
+            </xpath>
+            <!-- Footer -->
+            <xpath expr="//div[@class='page']" position="after">
+                <t t-call="serial_reporting.soulco_custom_footer" />
             </xpath>
         </template>
     </data>
