--- a/views/soulco_purchase_report.xml
+++ b/views/soulco_purchase_report.xml
@@ -83,7 +83,7 @@
             <!-- Add RC NIF & AI on customer info -->
             <xpath expr="//div[@class='col-xs-5 col-xs-offset-1']" position="replace">
                 <div class="col-xs-4 col-xs-offset-1">
-                    <table class="table-bordered" style="width:100%;padding-left:5px">
+                    <table class="table-bordered" style="width:100%;padding-left:5px;">
                         <tr>
                             <td>
                                 <h3 t-field="o.partner_id.name"></h3>
