--- a/views/account_invoice_custum_soulco.xml
+++ b/views/account_invoice_custum_soulco.xml
@@ -202,6 +202,9 @@
           </div>
 	</t>
       </xpath>
+      <xpath expr="//div[@class='page']" position="before">
+        <t t-call="serial_reporting.soulco_custom_header" />
+      </xpath>
       <xpath expr="//div[@class='page']" position="after">
         <t t-call="serial_reporting.soulco_custom_footer" />
       </xpath>
