--- a/views/serial_quotation_report.xml
+++ b/views/serial_quotation_report.xml
@@ -1,183 +1,186 @@
 <?xml version="1.0"?>
 <openerp>
-    <data>
-        <template id="serial_saleorder_replace_quotation_report" inherit_id="sale.report_saleorder_document">
-            <!-- <xpath expr="//div[@class='page']" position="before">
-                <t t-call="serial_reporting.soulco_custom_header" />
-            </xpath> -->
-            <xpath expr="//div[@class='page']" position="replace">
-                <div class="page">
-                    <div class="oe_structure"/>
-                    <h2>
-                        <span t-if="o.state not in ['draft','sent']">Order N°
-                        </span>
-                        <span t-if="o.state in ['draft','sent']">Quotation N°
-                        </span>
-                        <span t-field="o.name"/>
-                    </h2>
-                    <div t-if="o.date_order" class="col-xs-3">
-                        <strong t-if="o.state not in ['draft','sent']">Date Ordered:</strong>
-                        <strong t-if="o.state in ['draft','sent']">Quotation Date:</strong>
-                        <p t-field="o.date_order"/>
-                    </div>
+  <data>
+    <template id="serial_saleorder_replace_quotation_report" inherit_id="sale.report_saleorder_document">
+      <!-- <xpath expr="//div[@class='page']" position="before">
+           <t t-call="serial_reporting.soulco_custom_header" />
+           </xpath> -->
+      <xpath expr="//div[@class='page']" position="replace">
+        <div class="page">
+          <div class="oe_structure"/>
+          <h2>
+            <span t-if="o.state not in ['draft','sent']">Order N°
+            </span>
+            <span t-if="o.state in ['draft','sent']">Quotation N°
+            </span>
+            <span t-field="o.name"/>
+          </h2>
+          <div t-if="o.date_order" class="col-xs-3">
+            <strong t-if="o.state not in ['draft','sent']">Date Ordered:</strong>
+            <strong t-if="o.state in ['draft','sent']">Quotation Date:</strong>
+            <p t-field="o.date_order"/>
+          </div>
 
-                    <div class="row">
-                        <div class="col-xs-2" style="text-align:left">
-                            <strong t-if="o.partner_shipping_id == o.partner_invoice_id" style="text-align:left">Invoice and shipping address:</strong>
-                            <strong t-if="o.partner_shipping_id != o.partner_invoice_id" style="text-align:left">Invoice address:</strong>
-                            <div t-field="o.partner_invoice_id" style="text-align:left" t-field-options='{"widget": "contact", "fields": ["address","name", "phone", "fax"], "no_marker": true}'/>
-                            <p t-if="o.partner_id.vat">VAT:
-                                <span t-field="o.partner_id.vat" style="text-align:left"/></p>
-                            <div t-if="o.partner_shipping_id != o.partner_invoice_id" style="text-align:left" class="mt8">
-                                <strong>Shipping address:</strong>
-                                <div t-field="o.partner_shipping_id" style="text-align:left" t-field-options='{"widget": "contact", "fields": ["address","name", "phone", "fax"], "no_marker": true}'/>
-                                <p t-if="o.partner_id.vat">VAT:
-                                    <span t-field="o.partner_id.vat" style="text-align:left"/></p>
-                            </div>
-                        </div>
-                        <div class="col-xs-5 col-xs-offset-1" style="border: 1px solid #000000;color:#000000;">
-                            <h2 t-field="o.partner_id.name"/>
-                            <div t-field="o.partner_id" t-field-options='{"widget": "contact", "fields": ["address"], "no_marker": true}'/>
-                            <p>RC N°:
-                                <span t-field="o.partner_id.rc" style="text-align:left"/></p>
-                            <p>NIF :
-                                <span t-field="o.partner_id.nif" style="text-align:left"/></p>
-                            <p>AI :
-                                <span t-field="o.partner_id.ai" style="text-align:left"/></p>
-                            <div>
-                                <!-- style="border: 1px solid #000000;color:#000000;" -->
-                                <span>Ref Client :
-                                </span>
-                                <span t-field="o.partner_id.ref" style="text-align:left"/>
-                            </div>
+          <div class="row">
+            <div class="col-xs-2" style="text-align:left">
+              <strong t-if="o.partner_shipping_id == o.partner_invoice_id" style="text-align:left">Invoice and shipping address:</strong>
+              <strong t-if="o.partner_shipping_id != o.partner_invoice_id" style="text-align:left">Invoice address:</strong>
+              <div t-field="o.partner_invoice_id" style="text-align:left" t-field-options='{"widget": "contact", "fields": ["address","name", "phone", "fax"], "no_marker": true}'/>
+              <p t-if="o.partner_id.vat">VAT:
+              <span t-field="o.partner_id.vat" style="text-align:left"/></p>
+              <div t-if="o.partner_shipping_id != o.partner_invoice_id" style="text-align:left" class="mt8">
+                <strong>Shipping address:</strong>
+                <div t-field="o.partner_shipping_id" style="text-align:left" t-field-options='{"widget": "contact", "fields": ["address","name", "phone", "fax"], "no_marker": true}'/>
+                <p t-if="o.partner_id.vat">VAT:
+                <span t-field="o.partner_id.vat" style="text-align:left"/></p>
+              </div>
+            </div>
+            <div class="col-xs-5 col-xs-offset-1" style="border: 1px solid #000000;color:#000000;">
+              <h2 t-field="o.partner_id.name"/>
+              <div t-field="o.partner_id" t-field-options='{"widget": "contact", "fields": ["address"], "no_marker": true}'/>
+              <p>RC N°:
+              <span t-field="o.partner_id.rc" style="text-align:left"/></p>
+              <p>NIF :
+              <span t-field="o.partner_id.nif" style="text-align:left"/></p>
+              <p>AI :
+              <span t-field="o.partner_id.ai" style="text-align:left"/></p>
+              <div>
+                <!-- style="border: 1px solid #000000;color:#000000;" -->
+                <span>Ref Client :
+                </span>
+                <span t-field="o.partner_id.ref" style="text-align:left"/>
+              </div>
 
-                        </div>
-                    </div>
+            </div>
+          </div>
 
-                    <div class="row mt32 mb32" id="informations">
-                        <div t-if="o.client_order_ref" class="col-xs-3">
-                            <strong>Your Reference:</strong>
-                            <p t-field="o.client_order_ref"/>
-                        </div>
-                        <div t-if="o.user_id.name" class="col-xs-3">
-                            <strong>Salesperson:</strong>
-                            <p t-field="o.user_id.name"/>
-                        </div>
-                        <div t-if="o.payment_term" class="col-xs-3">
-                            <strong>Payment Term:</strong>
-                            <p t-field="o.payment_term"/>
-                        </div>
-                    </div>
+          <div class="row mt32 mb32" id="informations">
+            <div t-if="o.client_order_ref" class="col-xs-3">
+              <strong>Your Reference:</strong>
+              <p t-field="o.client_order_ref"/>
+            </div>
+            <div t-if="o.user_id.name" class="col-xs-3">
+              <strong>Salesperson:</strong>
+              <p t-field="o.user_id.name"/>
+            </div>
+            <div t-if="o.payment_term" class="col-xs-3">
+              <strong>Payment Term:</strong>
+              <p t-field="o.payment_term"/>
+            </div>
+          </div>
 
-                    <table class="table table-condensed">
-                        <thead>
-                            <tr>
-                                <th>N°</th>
-                                <th>Reference L</th>
-                                <th>Reference S</th>
-                                <th>Description</th>
-                                <th class="text-right">Quantity</th>
-                                <th class="text-right">Unit Price</th>
-                                <th groups="sale.group_discount_per_so_line">Disc.(%)</th>
-                                <th class="text-right">Price</th>
-                                <th>Taxes</th>
-                            </tr>
-                        </thead>
-                        <tbody class="sale_tbody">
-                            <t t-set="count" t-value="1"/>
-                            <tr t-foreach="o.order_line" t-as="l">
-                                <td>
-                                    <!-- numéro d'enregistrement commençant par 1 -->
-                                    <t t-raw="count"/>
-                                </td>
-                                <td>
-                                    <span t-field="l.product_id.default_code"/>
-                                </td>
-                                <td>
-                                    <span t-field="l.product_id.ean13"/>
-                                </td>
-                                <td>
-                                    <span t-field="l.name"/>
-                                </td>
-                                <td class="text-right">
-                                    <span t-field="l.product_uom_qty"/>
-                                    <span groups="product.group_uom" t-field="l.product_uom"/>
-                                </td>
-                                <td class="text-right">
-                                    <span t-field="l.price_unit"/>
-                                </td>
-                                <td groups="sale.group_discount_per_so_line">
-                                    <span t-field="l.discount"/>
-                                </td>
-                                <td class="text-right">
-                                    <span t-field="l.price_subtotal" t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
-                                </td>
-                                <td>
-                                    <span t-esc="', '.join(map(lambda x: x.name, l.tax_id))"/>
-                                </td>
-                                <t t-set="count" t-value="count+1"/>
-                            </tr>
-                        </tbody>
-                    </table>
+          <table class="table table-condensed">
+            <thead>
+              <tr>
+                <th>N°</th>
+                <th>Reference L</th>
+                <th>Reference S</th>
+                <th>Description</th>
+                <th class="text-right">Quantity</th>
+                <th class="text-right">Unit Price</th>
+                <th groups="sale.group_discount_per_so_line">Disc.(%)</th>
+                <th class="text-right">Price</th>
+                <th>Taxes</th>
+              </tr>
+            </thead>
+            <tbody class="sale_tbody">
+              <t t-set="count" t-value="1"/>
+              <tr t-foreach="o.order_line" t-as="l">
+                <td>
+                  <!-- numéro d'enregistrement commençant par 1 -->
+                  <t t-raw="count"/>
+                </td>
+                <td>
+                  <span t-field="l.product_id.default_code"/>
+                </td>
+                <td>
+                  <span t-field="l.product_id.ean13"/>
+                </td>
+                <td>
+                  <span t-field="l.name"/>
+                </td>
+                <td class="text-right">
+                  <span t-field="l.product_uom_qty"/>
+                  <span groups="product.group_uom" t-field="l.product_uom"/>
+                </td>
+                <td class="text-right">
+                  <span t-field="l.price_unit"/>
+                </td>
+                <td groups="sale.group_discount_per_so_line">
+                  <span t-field="l.discount"/>
+                </td>
+                <td class="text-right">
+                  <span t-field="l.price_subtotal" t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
+                </td>
+                <td>
+                  <span t-esc="', '.join(map(lambda x: x.name, l.tax_id))"/>
+                </td>
+                <t t-set="count" t-value="count+1"/>
+              </tr>
+            </tbody>
+          </table>
 
-                    <div class="row">
-                        <div class="col-xs-4 pull-right">
-                            <table class="table table-condensed">
-                                <tr class="border-black">
-                                    <td>
-                                        <strong>Total Without Taxes</strong>
-                                    </td>
-                                    <td class="text-right">
-                                        <span t-field="o.amount_untaxed" t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Taxes</td>
-                                    <td class="text-right">
-                                        <span t-field="o.amount_tax" t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
-                                    </td>
-                                </tr>
-                                <tr class="border-black">
-                                    <td>
-                                        <strong>Total</strong>
-                                    </td>
-                                    <td class="text-right">
-                                        <span t-field="o.amount_total" t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
-                                    </td>
-                                </tr>
-                                <div t-if="o.payment_term.note == 'cash'">
-                                    <tr>
-                                        <td>Timbre</td>
-                                        <td class="text-right">
-                                            <span t-field="o.amount_timbre" t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
-                                        </td>
-                                    </tr>
-                                    <tr class="border-black">
-                                        <td>
-                                            <strong>Total Timbre</strong>
-                                        </td>
-                                        <td class="text-right">
-                                            <span t-field="o.total_timbre" t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
-                                        </td>
-                                    </tr>
-                                </div>
-                            </table>
-                        </div>
-                    </div>
-
-                    <strong>Arrêtée la présente facture à la somme de:</strong>
-                    <p t-field="o.text_amount"/>
-                    <p t-field="o.note"/>
-                    <p t-if="o.payment_term.note">
-                        <strong>Payment Term:</strong>
-                        <span t-field="o.payment_term.note"/>
-                    </p>
-                    <div class="oe_structure"/>
+          <div class="row">
+            <div class="col-xs-4 pull-right">
+              <table class="table table-condensed">
+                <tr class="border-black">
+                  <td>
+                    <strong>Total Without Taxes</strong>
+                  </td>
+                  <td class="text-right">
+                    <span t-field="o.amount_untaxed" t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Taxes</td>
+                  <td class="text-right">
+                    <span t-field="o.amount_tax" t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
+                  </td>
+                </tr>
+                <tr class="border-black">
+                  <td>
+                    <strong>Total</strong>
+                  </td>
+                  <td class="text-right">
+                    <span t-field="o.amount_total" t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
+                  </td>
+                </tr>
+                <div t-if="o.payment_term.note == 'cash'">
+                  <tr>
+                    <td>Timbre</td>
+                    <td class="text-right">
+                      <span t-field="o.amount_timbre" t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
+                    </td>
+                  </tr>
+                  <tr class="border-black">
+                    <td>
+                      <strong>Total Timbre</strong>
+                    </td>
+                    <td class="text-right">
+                      <span t-field="o.total_timbre" t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
+                    </td>
+                  </tr>
                 </div>
-            </xpath>
-            <xpath expr="//div[@class='page']" position="after">
-                <t t-call="serial_reporting.soulco_custom_footer" />
-            </xpath>
-        </template>
-    </data>
+              </table>
+            </div>
+          </div>
+
+          <strong>Arrêtée la présente facture à la somme de:</strong>
+          <p t-field="o.text_amount"/>
+          <p t-field="o.note"/>
+          <p t-if="o.payment_term.note">
+            <strong>Payment Term:</strong>
+            <span t-field="o.payment_term.note"/>
+          </p>
+          <div class="oe_structure"/>
+        </div>
+      </xpath>
+      <xpath expr="//div[@class='page']" position="before">
+	<t t-call="serial_reporting.soulco_custom_header" />
+      </xpath>
+      <xpath expr="//div[@class='page']" position="after">
+        <t t-call="serial_reporting.soulco_custom_footer" />
+      </xpath>
+    </template>
+  </data>
 </openerp>
