--- a/views/serial_reporting_picking_custum.xml
+++ b/views/serial_reporting_picking_custum.xml
@@ -1,25 +1,215 @@
 <?xml version="1.0"?>
 <openerp>
   <data>
-
     <template id="project_soulco_report_picking_inherit" inherit_id="stock.report_picking">
-      <xpath expr="//table[@class='table table-condensed'][2]//thead//tr//th[3]" position="after">
-	<th>Numéro de serie</th>
+      <xpath expr="//div[@class='page']" position="replace">
+	<div class="page">
+	  <div class="col-xs-6">
+	    <h2>
+	      <span t-field="o.picking_type_id"/>:
+	      <span t-field="o.name"/>
+	    </h2>
+	  </div>
+
+	  <div class="row"><div class="col-xs-4 pull-right">
+            <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', o.name, 600, 100)" style="width:300px;height:50px;"/>
+          </div></div>
+
+	  <div class="row">
+	    <div class="col-xs-6" >
+              <div t-if="o.move_lines and o.move_lines[0].partner_id and o.move_lines[0].partner_id.id != o.partner_id.id">
+                <span><strong>Delivery Address:</strong></span>
+                <div t-field="o.move_lines[0].partner_id"
+                     t-field-options='{"widget": "contact", "fields": ["address", "name", "phone", "fax"], "no_marker": true}'/>
+              </div>
+              <div t-if="o.picking_type_id.code != 'internal' and (not o.move_lines or not o.move_lines[0].partner_id) and o.picking_type_id.warehouse_id.partner_id">
+                <span><strong>Warehouse Address:</strong></span>
+                <div t-field="o.picking_type_id.warehouse_id.partner_id"
+                     t-field-options='{"widget": "contact", "fields": ["address", "name", "phone", "fax"], "no_marker": true}'/>
+              </div>
+            </div>
+	    <div class="col-xs-5 col-xs-offset-1" style="border: 1px solid #000000;color:#000000;">
+	      <div t-if="o.picking_type_id.code=='incoming' and o.partner_id">
+                <span><strong>Supplier Address:</strong></span>
+              </div>
+              <div t-if="o.picking_type_id.code=='internal' and o.partner_id">
+                <span><strong>Warehouse Address:</strong></span>
+              </div>
+              <div t-if="o.picking_type_id.code=='outgoing' and o.partner_id">
+                <span><strong>Customer Address:</strong></span>
+              </div>
+
+              <div t-if="o.partner_id" name="partner_header">
+                <div t-field="o.partner_id"
+                     t-field-options='{"widget": "contact", "fields": ["address", "name", "phone", "fax"], "no_marker": true}'/>
+		<p>RC N°:
+                <span t-field="o.partner_id.rc" style="text-align:left"/></p>
+                <p>NIF :
+                <span t-field="o.partner_id.nif" style="text-align:left"/></p>
+                <p>AI :
+                <span t-field="o.partner_id.ai" style="text-align:left"/></p>
+                <div>
+                  <!-- style="border: 1px solid #000000;color:#000000;" -->
+                  <span>Ref Client :
+                  </span>
+                  <span t-field="o.partner_id.ref" style="text-align:left"/>
+                </div>
+		<p t-if="o.partner_id.vat">VAT: <span t-field="o.partner_id.vat"/></p>
+              </div>
+            </div>
+          </div>
+
+          <table class="table table-condensed">
+            <thead>
+              <tr>
+                <th><strong>Order (Origin)</strong></th>
+                <th><strong>State</strong></th>
+                <th><strong>Commitment Date</strong></th>
+                <th name="td_sched_date_h"><strong>Scheduled Date</strong></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <span t-field="o.origin"/>
+                </td>
+                <td>
+                  <span t-field="o.state"/>
+                </td>
+                <td>
+                  <span t-field="o.date"/>
+                </td>
+                <td name="td_sched_date">
+                  <span t-field="o.min_date"/>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <br/>
+          <br/>
+          <table class="table table-condensed" t-if="not o.pack_operation_ids">
+            <thead>
+              <tr>
+		<th><strong>N°: </strong></th>
+		<th><strong>Numéro de serie</strong></th>
+		<th><strong>Réf.S</strong></th>
+               	<th><strong>Product</strong></th>
+                <th class="text-right"><strong>Quantity</strong></th>
+                <t t-if="o.picking_type_id.code != 'incoming'"><th><strong>Source</strong></th></t>
+		<t t-if="o.picking_type_id.code != 'outgoing'"><th><strong>Destination</strong></th></t>
+	      </tr>
+            </thead>
+            <tbody>
+	      <t t-set="count" t-value="1"/>
+	      <tr t-foreach="o.move_lines" t-as="move">
+		<td>
+                  <!-- numéro d'enregistrement commençant par 1 -->
+                  <t t-raw="count"/>
+                </td>
+		<td>
+    		  <span t-field="move.lot_ids.name"/>
+    		</td>
+		<td>
+                  <span t-if="move.product_id and move.product_id.ean13">
+                    <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', move.product_id.ean13, 600, 100)" style="width:300px;height:50px"/>
+                  </span>
+                </td>
+		<t t-if="(o.state != 'partially_available') or (move.reserved_availability > 0)">
+                  <td><span t-field="move.product_id"/></td>
+                  <td class="text-right">
+                    <t t-if="o.state == 'partially_available'">
+                      <span t-field="move.reserved_availability"/> <span t-field="move.product_id.uom_id" groups="product.group_uom"/>
+                    </t>
+                    <t t-if="o.state != 'partially_available'">
+                      <span t-field="move.product_uom_qty"/> <span t-field="move.product_uom" groups="product.group_uom"/>
+                    </t>
+                  </td>
+                  <t t-if="o.picking_type_id.code != 'incoming'"><td><span t-field="move.location_id"/></td></t>
+                  <t t-if="o.picking_type_id.code != 'outgoing'"><td><span t-field="move.location_dest_id"/></td></t>
+
+                </t>
+		<t t-set="count" t-value="count+1"/>
+	      </tr>
+	    </tbody>
+          </table>
+          <table class="table table-condensed" t-if="o.pack_operation_ids">
+            <thead>
+              <tr>
+		<th><strong>N°: </strong></th>
+		<th><strong>Numéro de serie</strong></th>
+		<th><strong>Réf.S</strong></th>
+                <th><strong>Product</strong></th>
+                <th class="text-right"><strong>Quantity</strong></th>
+                <t t-if="o.picking_type_id.code != 'incoming'"><th><strong>Source</strong></th></t>
+                <t t-if="o.picking_type_id.code != 'outgoing'"><th><strong>Destination</strong></th></t>
+              </tr>
+            </thead>
+            <tbody>
+	      <t t-set="count" t-value="1"/>
+              <tr t-foreach="o.pack_operation_ids" t-as="pack_operation">
+		<td>
+                  <!-- numéro d'enregistrement commençant par 1 -->
+                  <t t-raw="count"/>
+                </td>
+		<td>
+    		  <span t-field="pack_operation.lot_id.name"/>
+    		</td>
+		<td>
+                  <span t-if="pack_operation.lot_id">
+                    <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', pack_operation.lot_id.name, 600, 100)" style="width:300px;height:50px"/>
+                  </span>
+                  <span t-if="pack_operation.product_id and not pack_operation.lot_id and pack_operation.product_id.ean13">
+                    <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', pack_operation.product_id.ean13, 600, 100)" style="width:300px;height:50px"/>
+                  </span>
+                  <span t-if="pack_operation.package_id and not pack_operation.product_id">
+                    <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', pack_operation.package_id.name, 600, 100)" style="width:300px;height:50px"/>
+                  </span>
+                </td>
+                <td><span t-field="pack_operation.product_id"/>
+                <t t-if="not pack_operation.product_id and pack_operation.package_id"><span  t-field="pack_operation.package_id"/></t></td>
+                <td class="text-right"><span t-field="pack_operation.product_qty"/> <span t-field="pack_operation.product_uom_id" groups="product.group_uom"/></td>
+                <t t-if="o.picking_type_id.code != 'incoming'">
+		  <td><span t-field="pack_operation.location_id"/>
+                  <span t-if="pack_operation.package_id">:</span>
+                  <span t-field="pack_operation.package_id"/>
+                  <span t-if="pack_operation.lot_id">:</span>
+                  <span t-field="pack_operation.lot_id"/>
+		  </td>
+                </t>
+                <t t-if="o.picking_type_id.code != 'outgoing'"><td><span t-field="pack_operation.location_dest_id"/>
+                <span t-if="pack_operation.result_package_id">:</span>
+                <span t-field="pack_operation.result_package_id"/>
+                </td></t>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </xpath>
-       <xpath expr="//table[@class='table table-condensed'][3]//thead//tr//th[3]" position="after">
-	<th>Numéro de serie</th>
+      <xpath expr="//div[@class='page']" position="before">
+        <t t-call="serial_reporting.soulco_custom_header" />
       </xpath>
-      <xpath expr="//tr[@t-foreach='o.move_lines']//t//td[3]" position="after">
-	<td>
-	  <span t-field="move.lot_ids.name"/>
-	</td>
-      </xpath>
-      <xpath expr="//tr[@t-foreach='o.pack_operation_ids']//td[3]" position="after">
-	<td>
-	  <span t-field="pack_operation.lot_id.name"/>
-	</td>
+      <xpath expr="//div[@class='page']" position="after">
+        <t t-call="serial_reporting.soulco_custom_footer" />
       </xpath>
     </template>
+
+
+
+    <!-- <template id="project_soulco_report_picking_inherit" inherit_id="stock.report_picking"> -->
+    <!--   <xpath expr="//table[@class='table table-condensed'][3]//thead//tr//th[3]" position="after"> -->
+    <!-- 	<th>Numéro de serie</th> -->
+    <!--   </xpath> -->
+    <!--   <xpath expr="//tr[@t-foreach='o.move_lines']//t//td[3]" position="after"> -->
+    <!-- 	<td> -->
+    <!-- 	  <span t-field="move.lot_ids.name"/> -->
+    <!-- 	</td> -->
+    <!--   </xpath> -->
+    <!--   <xpath expr="//tr[@t-foreach='o.pack_operation_ids']//td[3]" position="after"> -->
+    <!-- 	<td> -->
+    <!-- 	  <span t-field="pack_operation.lot_id.name"/> -->
+    <!-- 	</td> -->
+    <!--   </xpath> -->
+    <!-- </template> -->
 
     </data>
 </openerp>
