--- a/views/serial_reporting_picking_custum.xml
+++ b/views/serial_reporting_picking_custum.xml
@@ -4,16 +4,16 @@
     <template id="project_soulco_report_picking_inherit" inherit_id="stock.report_picking">
       <xpath expr="//div[@class='page']" position="replace">
 	<div class="page">
-	  <div class="col-xs-6">
+	  <div class="col-xs-1">
 	    <h2>
 	      <span t-field="o.picking_type_id"/>:
 	      <span t-field="o.name"/>
 	    </h2>
-	  </div>
+	    <div class="row"><div class="col-xs-4 pull-right">
+              <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', o.name, 600, 100)" style="width:300px;height:50px;"/>
+	    </div></div>
 
-	  <div class="row"><div class="col-xs-4 pull-right">
-            <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', o.name, 600, 100)" style="width:300px;height:50px;"/>
-          </div></div>
+	  </div>
 
 	  <div class="row">
 	    <div class="col-xs-6" >
@@ -25,7 +25,7 @@
               <div t-if="o.picking_type_id.code != 'internal' and (not o.move_lines or not o.move_lines[0].partner_id) and o.picking_type_id.warehouse_id.partner_id">
                 <span><strong>Warehouse Address:</strong></span>
                 <div t-field="o.picking_type_id.warehouse_id.partner_id"
-                     t-field-options='{"widget": "contact", "fields": ["address", "name", "phone", "fax"], "no_marker": true}'/>
+                     t-field-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}'/>
               </div>
             </div>
 	    <div class="col-xs-5 col-xs-offset-1" style="border: 1px solid #000000;color:#000000;">
@@ -38,10 +38,9 @@
               <div t-if="o.picking_type_id.code=='outgoing' and o.partner_id">
                 <span><strong>Customer Address:</strong></span>
               </div>
-
               <div t-if="o.partner_id" name="partner_header">
                 <div t-field="o.partner_id"
-                     t-field-options='{"widget": "contact", "fields": ["address", "name", "phone", "fax"], "no_marker": true}'/>
+                     t-field-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}'/>
 		<p>RC N°:
                 <span t-field="o.partner_id.rc" style="text-align:left"/></p>
                 <p>NIF :
