--- a/views/soulco_purchase_report.xml
+++ b/views/soulco_purchase_report.xml
@@ -75,35 +75,68 @@
                 </div>
             </xpath>
             <!-- Remove 'your shipping company' -->
+            <!-- Replace by Request name & date -->
             <xpath expr="//div[@class='col-xs-6']" position="replace">
-                <div class='col-xs-6'>
-                    <h2>Soulco company</h2>
+                <div class='col-xs-6 pull-left'>
+                    <h3 t-if="o.state != 'draft'">Purchase Order Confirmation N°<span t-field="o.name"/></h3>
+                    <h3 t-if="o.state == 'draft'">Request for Quotation N°<span t-field="o.name"/></h3>
+
+                    <div style="font-size:85%;">
+                        <!-- <div t-if="o.name" class="col-xs-3">
+                            <strong>Our Order Reference:</strong>
+                            <p t-field="o.name"/>
+                        </div> -->
+                        <div t-if="o.partner_ref" class="col-xs-4">
+                            <strong>Your Order Reference</strong>
+                            <p t-field="o.partner_ref"/>
+                        </div>
+                        <div t-if="o.date_order" class="col-xs-4">
+                            <strong>Order Date:</strong>
+                            <p t-field="o.date_order"/>
+                        </div>
+                        <div t-if="o.validator" class="col-xs-4">
+                            <strong>Validated By:</strong>
+                            <p t-field="o.validator"/>
+                        </div>
+                    </div>
                 </div>
             </xpath>
+
+            <!-- Remove request name and date in original position -->
+            <xpath expr="//h2" position="replace">
+                <h2></h2>
+            </xpath>
+
+            <xpath expr="//div[@class='row mt32 mb32']" position="replace">
+                <div class="row mt32 mb32">
+                    <!-- Remplacé -->
+                </div>
+            </xpath>
+
             <!-- Add RC NIF & AI on customer info -->
             <xpath expr="//div[@class='col-xs-5 col-xs-offset-1']" position="replace">
                 <div class="col-xs-4 col-xs-offset-1">
-                    <table class="table-bordered" style="width:100%;padding-left:5px;">
+                    <table class="table-bordered" style="width:120%;">
                         <tr>
                             <td>
                                 <h3 t-field="o.partner_id.name"></h3>
-                                <div t-field="o.partner_id" t-field-options='{"widget": "contact", "fields": ["address"], "no_marker": true}'/>
+                                <div  style="pading-left:10px;" t-field="o.partner_id" t-field-options='{"widget": "contact", "fields": ["address"], "no_marker": true}'/>
                                 <!-- Saut de ligne ici -->
                                 <br/>
-                                <p>
+                                <p style="margin:10px;">
                                     RC N°:
                                     <span t-field="o.partner_id.rc"/></p>
-                                <p>
+                                <p style="margin:10px;">
                                     NIF:
                                     <span t-field="o.partner_id.nif"/></p>
-                                <p>
+                                <p style="margin:10px;">
                                     AI:
                                     <span t-field="o.partner_id.ai"/></p>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <p>
+                                <p  style="margin:10px;">
                                     Ref client:
                                     <span t-field="o.partner_ref"/></p>
                             </td>
