--- a/views/account_invoice_custum_soulco.xml
+++ b/views/account_invoice_custum_soulco.xml
@@ -186,7 +186,7 @@
             <!--   </div> -->
             <!-- </div> -->
 	    <strong>Arrêtée la présente facture à la somme de:</strong>
-            <p t-field="o.text_amount"/>
+            <p t-field="o.amounTexte"/>
             <p t-if="o.comment">
               <strong>Comment:</strong>
               <span t-field="o.comment"/>
